# skill-compose

./: .dockerignore  .env.example  .gitignore  README.md  README_es.md  README_ja.md  README_pt-BR.md  README_zh-CN.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agent/: __init__.py  agent.py  tools.py
app/core/: schema_validator.py  skill_config.py  skill_manager.py  tools_registry.py
app/db/: __init__.py  database.py  models.py
app/llm/: __init__.py  code_generator.py  intent_parser.py  models.py  provider.py
app/models/: package.py  request.py  skill.py
app/repositories/: __init__.py  skill_repo.py  version_repo.py
app/services/: __init__.py  executor_client.py  executor_config.py  skill_service.py  task_manager.py
app/terminal/: pty_manager.py
app/tools/: __init__.py  code_executor.py  file_scanner.py  ipython_kernel.py  mcp_client.py
config/: executors.json  executors.json.example  mcp-secrets.json  mcp.json  mcp.json.example  seed_agents.json  seed_skills.json  skills.json
docker/: .dockerignore  .env.example  .gitignore  Makefile  deploy.sh  docker-compose.prod.yaml  docker-compose.yaml  init.sh  rebuild.sh  test_session.sh
docker/api/: Dockerfile  entrypoint.sh
docker/backups/: docker-compose.yaml.20260204_165027.bak  docker-compose.yaml.20260204_173255.bak  (+3 more)
docs/: docusaurus.config.ts  package.json  sidebars.ts
scripts/: backup.sh  restart-dev.sh  restore.sh  run-tests.sh
tests/: README.md  TESTING_GUIDE.md  conftest.py  factories.py
web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
(+338 files in other folders)
